include/rthw.h


void rt_hw_exception_install(rt_err_t (*exception_handle)(void *context));