include/rtdef.h

typedef signed long                     rt_base_t;      
typedef unsigned long                   rt_ubase_t;     
typedef uint8_t                         rt_uint8_t;     
typedef uint16_t                        rt_uint16_t;    
typedef uint32_t                        rt_uint32_t;    
typedef uint64_t                        rt_uint64_t;    
typedef unsigned char                   rt_uint8_t;     
typedef unsigned short                  rt_uint16_t;    
typedef unsigned int                    rt_uint32_t;    
typedef unsigned long                   rt_uint64_t;    
typedef unsigned long long              rt_uint64_t;    
typedef size_t                          rt_size_t;      
typedef ssize_t                         rt_ssize_t;     
typedef rt_ubase_t                      rt_size_t;      
typedef rt_base_t                       rt_ssize_t;     
typedef rt_uint32_t                     rt_tick_t;      
typedef rt_base_t                       rt_off_t;       
struct rt_list_node
{
    struct rt_list_node *next;                          
    struct rt_list_node *prev;                          
};
typedef struct rt_list_node rt_list_t;                  
struct rt_object
{
#if RT_NAME_MAX > 0
    char        name[RT_NAME_MAX];                       
#else
    const char *name;                                    
#endif 
    rt_uint8_t  type;                                    
    rt_uint8_t  flag;                                    
#ifdef RT_USING_MODULE
    void      * module_id;                               
#endif 
#ifdef RT_USING_SMART
    int         lwp_ref_count;                           
#endif 
    rt_list_t   list;                                    
};
typedef struct rt_object *rt_object_t;                   
struct rt_timer
{
    struct rt_object parent;                            
    rt_list_t        row[RT_TIMER_SKIP_LIST_LEVEL];
    void (*timeout_func)(void *parameter);              
    void            *parameter;                         
    rt_tick_t        init_tick;                         
    rt_tick_t        timeout_tick;                      
};
typedef struct rt_timer *rt_timer_t;
typedef unsigned long rt_sigset_t;
typedef void (*rt_sighandler_t)(int signo);
enum
{
    RT_INTERRUPTIBLE = 0,
    RT_KILLABLE,
    RT_UNINTERRUPTIBLE,
};
struct rt_cpu;
struct rt_thread;
struct rt_wakeup
{
    rt_wakeup_func_t func;
    void *user_data;
};
typedef void (*lwp_sighandler_t)(int);
struct lwp_thread_signal {
    lwp_sigset_t sigset_mask;
    struct lwp_sigqueue sig_queue;
};
struct rt_user_context
{
    void *sp;
    void *pc;
    void *flag;
    void *ctx;
};
typedef void (*rt_thread_cleanup_t)(struct rt_thread *tid);
struct rt_thread
{
    struct rt_object            parent;
    rt_list_t                   tlist;                  
    void                        *sp;                    
    void                        *entry;                 
    void                        *parameter;             
    rt_thread_cleanup_t         cleanup;                
    void                        *stack_addr;            
    rt_uint32_t                 stack_size;             
    rt_uint16_t                  stat;                   
    rt_uint8_t                  current_priority;       
    rt_uint8_t                  init_priority;          
#if RT_THREAD_PRIORITY_MAX > 32
    rt_uint8_t                  number;
    rt_uint8_t                  high_mask;
#endif 
    rt_uint32_t                 number_mask;            
    rt_tick_t                   init_tick;              
    rt_tick_t                   remaining_tick;         
    struct rt_timer             thread_timer;           
    rt_err_t                    error;                    
#ifdef RT_USING_SMP
    rt_uint8_t                  bind_cpu;               
    rt_uint8_t                  oncpu;                  
    rt_uint16_t                 critical_lock_nest;     
#endif 
#ifdef RT_USING_MUTEX
    rt_list_t                   taken_object_list;
    rt_object_t                 pending_object;
#endif
#ifdef RT_USING_EVENT
    rt_uint32_t                 event_set;
    rt_uint8_t                  event_info;
#endif 
#ifdef RT_USING_SIGNALS
    rt_sigset_t                 sig_pending;            
    rt_sigset_t                 sig_mask;               
#ifndef RT_USING_SMP
    void                        *sig_ret;               
#endif 
    rt_sighandler_t             *sig_vectors;           
    void                        *si_list;               
#endif 
#ifdef RT_USING_CPU_USAGE
    rt_uint64_t                 duration_tick;          
#endif 
#ifdef RT_USING_PTHREADS
    void                        *pthread_data;          
#endif 
#ifdef RT_USING_SMART
    void                        *msg_ret;               
    void                        *lwp;                   
    void                        *user_entry;
    void                        *user_stack;
    rt_uint32_t                 user_stack_size;
    rt_uint32_t                 *kernel_sp;             
    rt_list_t                   sibling;                
    struct lwp_thread_signal    signal;                 
    struct rt_user_context      user_ctx;               
    struct rt_wakeup            wakeup;                 
    int                         exit_request;
    int                         tid;
#ifndef ARCH_MM_MMU
    lwp_sighandler_t            signal_handler[32];
#else
    int                         step_exec;
    int                         debug_attach_req;
    int                         debug_ret_user;
    int                         debug_suspend;
    struct rt_hw_exp_stack      *regs;
    void                        *thread_idr;            
    int                         *clear_child_tid;
#endif 
#endif 
};
typedef struct rt_thread *rt_thread_t;
struct rt_ipc_object
{
    struct rt_object parent;                            
    rt_list_t        suspend_thread;                    
};
struct rt_semaphore
{
    struct rt_ipc_object parent;                        
    rt_uint16_t          value;                         
    rt_uint16_t          reserved;                      
};
typedef struct rt_semaphore *rt_sem_t;
struct rt_mutex
{
    struct rt_ipc_object parent;                        
    rt_uint8_t           ceiling_priority;              
    rt_uint8_t           priority;                      
    rt_uint8_t           hold;                          
    rt_uint8_t           reserved;                      
    struct rt_thread    *owner;                         
    rt_list_t            taken_list;                    
};
typedef struct rt_mutex *rt_mutex_t;
struct rt_event
{
    struct rt_ipc_object parent;                        
    rt_uint32_t          set;                           
};
typedef struct rt_event *rt_event_t;
struct rt_mailbox
{
    struct rt_ipc_object parent;                        
    rt_ubase_t          *msg_pool;                      
    rt_uint16_t          size;                          
    rt_uint16_t          entry;                         
    rt_uint16_t          in_offset;                     
    rt_uint16_t          out_offset;                    
    rt_list_t            suspend_sender_thread;         
};
typedef struct rt_mailbox *rt_mailbox_t;
struct rt_messagequeue
{
    struct rt_ipc_object parent;                        
    void                *msg_pool;                      
    rt_uint16_t          msg_size;                      
    rt_uint16_t          max_msgs;                      
    rt_uint16_t          entry;                         
    void                *msg_queue_head;                
    void                *msg_queue_tail;                
    void                *msg_queue_free;                
    rt_list_t            suspend_sender_thread;         
};
typedef struct rt_messagequeue *rt_mq_t;
struct rt_memory
{
    struct rt_object        parent;                 
    const char *            algorithm;              
    rt_ubase_t              address;                
    rt_size_t               total;                  
    rt_size_t               used;                   
    rt_size_t               max;                    
};
typedef struct rt_memory *rt_mem_t;
typedef rt_mem_t rt_smem_t;
enum rt_device_class_type
{
    RT_Device_Class_Char = 0,                           
    RT_Device_Class_Block,                              
    RT_Device_Class_NetIf,                              
    RT_Device_Class_MTD,                                
    RT_Device_Class_CAN,                                
    RT_Device_Class_RTC,                                
    RT_Device_Class_Sound,                              
    RT_Device_Class_Graphic,                            
    RT_Device_Class_I2CBUS,                             
    RT_Device_Class_USBDevice,                          
    RT_Device_Class_USBHost,                            
    RT_Device_Class_USBOTG,                             
    RT_Device_Class_SPIBUS,                             
    RT_Device_Class_SPIDevice,                          
    RT_Device_Class_SDIO,                               
    RT_Device_Class_PM,                                 
    RT_Device_Class_Pipe,                               
    RT_Device_Class_Portal,                             
    RT_Device_Class_Timer,                              
    RT_Device_Class_Miscellaneous,                      
    RT_Device_Class_Sensor,                             
    RT_Device_Class_Touch,                              
    RT_Device_Class_PHY,                                
    RT_Device_Class_Security,                           
    RT_Device_Class_WLAN,                               
    RT_Device_Class_Pin,                                
    RT_Device_Class_ADC,                                
    RT_Device_Class_DAC,                                
    RT_Device_Class_WDT,                                
    RT_Device_Class_PWM,                                
    RT_Device_Class_Bus,                                
    RT_Device_Class_Unknown                             
};
typedef struct rt_device *rt_device_t;
struct rt_device_ops
{
    rt_err_t  (*init)   (rt_device_t dev);
    rt_err_t  (*open)   (rt_device_t dev, rt_uint16_t oflag);
    rt_err_t  (*close)  (rt_device_t dev);
    rt_ssize_t (*read)  (rt_device_t dev, rt_off_t pos, void *buffer, rt_size_t size);
    rt_ssize_t (*write) (rt_device_t dev, rt_off_t pos, const void *buffer, rt_size_t size);
    rt_err_t  (*control)(rt_device_t dev, int cmd, void *args);
};
struct rt_wqueue
{
    rt_uint32_t flag;
    rt_list_t waiting_list;
};
typedef struct rt_wqueue rt_wqueue_t;
struct rt_device
{
    struct rt_object          parent;                   
#ifdef RT_USING_DM
    struct rt_driver *drv;
    void *dtb_node;
#endif
    enum rt_device_class_type type;                     
    rt_uint16_t               flag;                     
    rt_uint16_t               open_flag;                
    rt_uint8_t                ref_count;                
    rt_uint8_t                device_id;                
    rt_err_t (*rx_indicate)(rt_device_t dev, rt_size_t size);
    rt_err_t (*tx_complete)(rt_device_t dev, void *buffer);
#ifdef RT_USING_DEVICE_OPS
    const struct rt_device_ops *ops;
#else
    rt_err_t  (*init)   (rt_device_t dev);
    rt_err_t  (*open)   (rt_device_t dev, rt_uint16_t oflag);
    rt_err_t  (*close)  (rt_device_t dev);
    rt_ssize_t (*read)  (rt_device_t dev, rt_off_t pos, void *buffer, rt_size_t size);
    rt_ssize_t (*write) (rt_device_t dev, rt_off_t pos, const void *buffer, rt_size_t size);
    rt_err_t  (*control)(rt_device_t dev, int cmd, void *args);
#endif 
#ifdef RT_USING_POSIX_DEVIO
    const struct dfs_file_ops *fops;
    struct rt_wqueue wait_queue;
#endif 
    void                     *user_data;                
};
struct rt_driver
{
#ifdef RT_USING_DEVICE_OPS
    const struct rt_device_ops *dev_ops;
#else
    rt_err_t  (*init)   (rt_device_t dev);
    rt_err_t  (*open)   (rt_device_t dev, rt_uint16_t oflag);
    rt_err_t  (*close)  (rt_device_t dev);
    rt_ssize_t (*read)  (rt_device_t dev, rt_off_t pos, void *buffer, rt_size_t size);
    rt_ssize_t (*write) (rt_device_t dev, rt_off_t pos, const void *buffer, rt_size_t size);
    rt_err_t  (*control)(rt_device_t dev, int cmd, void *args);
#endif
    const struct filesystem_ops *fops;
    const char *name;
    enum rt_device_class_type dev_type;
    int device_size;
    int flag;
    const struct rt_device_id *dev_match;
    int (*probe)(struct rt_device *dev);
    int (*probe_init)(struct rt_device *dev);
    int (*remove)(struct rt_device *dev);
    const void *ops;    
    void *drv_priv_data;
};