blue/bsp/src/bindings.rs

#[test]
fn bindgen_test_layout_rt_messagequeue() {
    const UNINIT: ::core::mem::MaybeUninit<rt_messagequeue> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_messagequeue>(),
        96usize,
        concat!("Size of: ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_messagequeue>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_messagequeue))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).inner_queue) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_messagequeue),
            "::",
            stringify!(inner_queue)
        )
    );
}
pub type rt_object_t = *mut rt_object;
pub type rt_timer_t = *mut rt_timer;
pub const RT_INTERRUPTIBLE: _bindgen_ty_1 = 0;
pub const RT_KILLABLE: _bindgen_ty_1 = 1;
pub const RT_UNINTERRUPTIBLE: _bindgen_ty_1 = 2;
pub type _bindgen_ty_1 = core::ffi::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_cpu {
    _unused: [u8; 0],
}
pub type rt_thread_cleanup_t = ::core::option::Option<unsafe extern "C" fn(tid: *mut rt_thread)>;
pub type rt_thread_t = *mut rt_thread;
pub type rt_sem_t = *mut rt_semaphore;
pub type rt_mutex_t = *mut rt_mutex;
pub type rt_event_t = *mut rt_event;
pub type rt_mailbox_t = *mut rt_mailbox;
pub type rt_mq_t = *mut rt_messagequeue;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_memory {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< Memory management algorithm name"]
    pub algorithm: *const core::ffi::c_char,
    #[doc = "< memory start address"]
    pub address: rt_ubase_t,
    #[doc = "< memory size"]
    pub total: rt_size_t,
    #[doc = "< size used"]
    pub used: rt_size_t,
    #[doc = "< maximum usage"]
    pub max: rt_size_t,
}
#[test]
fn bindgen_test_layout_rt_memory() {
    const UNINIT: ::core::mem::MaybeUninit<rt_memory> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_memory>(),
        40usize,
        concat!("Size of: ", stringify!(rt_memory))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_memory>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_memory))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).algorithm) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(algorithm)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).total) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).used) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_memory),
            "::",
            stringify!(max)
        )
    );
}
pub type rt_mem_t = *mut rt_memory;
pub type rt_smem_t = rt_mem_t;
#[doc = "< character device"]
pub const rt_device_class_type_RT_Device_Class_Char: rt_device_class_type = 0;
#[doc = "< block device"]
pub const rt_device_class_type_RT_Device_Class_Block: rt_device_class_type = 1;
#[doc = "< net interface"]
pub const rt_device_class_type_RT_Device_Class_NetIf: rt_device_class_type = 2;
#[doc = "< memory device"]
pub const rt_device_class_type_RT_Device_Class_MTD: rt_device_class_type = 3;
#[doc = "< CAN device"]
pub const rt_device_class_type_RT_Device_Class_CAN: rt_device_class_type = 4;
#[doc = "< RTC device"]
pub const rt_device_class_type_RT_Device_Class_RTC: rt_device_class_type = 5;
#[doc = "< Sound device"]
pub const rt_device_class_type_RT_Device_Class_Sound: rt_device_class_type = 6;
#[doc = "< Graphic device"]
pub const rt_device_class_type_RT_Device_Class_Graphic: rt_device_class_type = 7;
#[doc = "< I2C bus device"]
pub const rt_device_class_type_RT_Device_Class_I2CBUS: rt_device_class_type = 8;
#[doc = "< USB slave device"]
pub const rt_device_class_type_RT_Device_Class_USBDevice: rt_device_class_type = 9;
#[doc = "< USB host bus"]
pub const rt_device_class_type_RT_Device_Class_USBHost: rt_device_class_type = 10;
#[doc = "< USB OTG bus"]
pub const rt_device_class_type_RT_Device_Class_USBOTG: rt_device_class_type = 11;
#[doc = "< SPI bus device"]
pub const rt_device_class_type_RT_Device_Class_SPIBUS: rt_device_class_type = 12;
#[doc = "< SPI device"]
pub const rt_device_class_type_RT_Device_Class_SPIDevice: rt_device_class_type = 13;
#[doc = "< SDIO bus device"]
pub const rt_device_class_type_RT_Device_Class_SDIO: rt_device_class_type = 14;
#[doc = "< PM pseudo device"]
pub const rt_device_class_type_RT_Device_Class_PM: rt_device_class_type = 15;
#[doc = "< Pipe device"]
pub const rt_device_class_type_RT_Device_Class_Pipe: rt_device_class_type = 16;
#[doc = "< Portal device"]
pub const rt_device_class_type_RT_Device_Class_Portal: rt_device_class_type = 17;
#[doc = "< Timer device"]
pub const rt_device_class_type_RT_Device_Class_Timer: rt_device_class_type = 18;
#[doc = "< Miscellaneous device"]
pub const rt_device_class_type_RT_Device_Class_Miscellaneous: rt_device_class_type = 19;
#[doc = "< Sensor device"]
pub const rt_device_class_type_RT_Device_Class_Sensor: rt_device_class_type = 20;
#[doc = "< Touch device"]
pub const rt_device_class_type_RT_Device_Class_Touch: rt_device_class_type = 21;
#[doc = "< PHY device"]
pub const rt_device_class_type_RT_Device_Class_PHY: rt_device_class_type = 22;
#[doc = "< Security device"]
pub const rt_device_class_type_RT_Device_Class_Security: rt_device_class_type = 23;
#[doc = "< WLAN device"]
pub const rt_device_class_type_RT_Device_Class_WLAN: rt_device_class_type = 24;
#[doc = "< Pin device"]
pub const rt_device_class_type_RT_Device_Class_Pin: rt_device_class_type = 25;
#[doc = "< ADC device"]
pub const rt_device_class_type_RT_Device_Class_ADC: rt_device_class_type = 26;
#[doc = "< DAC device"]
pub const rt_device_class_type_RT_Device_Class_DAC: rt_device_class_type = 27;
#[doc = "< WDT device"]
pub const rt_device_class_type_RT_Device_Class_WDT: rt_device_class_type = 28;
#[doc = "< PWM device"]
pub const rt_device_class_type_RT_Device_Class_PWM: rt_device_class_type = 29;
#[doc = "< Bus device"]
pub const rt_device_class_type_RT_Device_Class_Bus: rt_device_class_type = 30;
#[doc = "< unknown device"]
pub const rt_device_class_type_RT_Device_Class_Unknown: rt_device_class_type = 31;
#[doc = " device (I/O) class type"]
pub type rt_device_class_type = core::ffi::c_uchar;
pub type rt_device_t = *mut rt_device;
#[doc = " WaitQueue structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_wqueue {
    pub flag: rt_uint32_t,
    pub waiting_list: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_wqueue() {
    const UNINIT: ::core::mem::MaybeUninit<rt_wqueue> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_wqueue>(),
        12usize,
        concat!("Size of: ", stringify!(rt_wqueue))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_wqueue>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_wqueue))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flag) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_wqueue),
            "::",
            stringify!(flag)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).waiting_list) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_wqueue),
            "::",
            stringify!(waiting_list)
        )
    );
}
#[doc = " WaitQueue structure"]
pub type rt_wqueue_t = rt_wqueue;
#[doc = " Device structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_device {
    #[doc = "< inherit from rt_object"]
    pub parent: rt_object,
    #[doc = "< device type"]
    pub type_: rt_device_class_type,
    #[doc = "< device flag"]
    pub flag: rt_uint16_t,
    #[doc = "< device open flag"]
    pub open_flag: rt_uint16_t,
    #[doc = "< reference count"]
    pub ref_count: rt_uint8_t,
    #[doc = "< 0 - 255"]
    pub device_id: rt_uint8_t,
    pub rx_indicate:
        ::core::option::Option<unsafe extern "C" fn(dev: rt_device_t, size: rt_size_t) -> rt_err_t>,
    pub tx_complete: ::core::option::Option<
        unsafe extern "C" fn(dev: rt_device_t, buffer: *mut core::ffi::c_void) -> rt_err_t,
    >,
    pub init: ::core::option::Option<unsafe extern "C" fn(dev: rt_device_t) -> rt_err_t>,
    pub open: ::core::option::Option<
        unsafe extern "C" fn(dev: rt_device_t, oflag: rt_uint16_t) -> rt_err_t,
    >,
    pub close: ::core::option::Option<unsafe extern "C" fn(dev: rt_device_t) -> rt_err_t>,
    pub read: ::core::option::Option<
        unsafe extern "C" fn(
            dev: rt_device_t,
            pos: rt_off_t,
            buffer: *mut core::ffi::c_void,
            size: rt_size_t,
        ) -> rt_ssize_t,
    >,
    pub write: ::core::option::Option<
        unsafe extern "C" fn(
            dev: rt_device_t,
            pos: rt_off_t,
            buffer: *const core::ffi::c_void,
            size: rt_size_t,
        ) -> rt_ssize_t,
    >,
    pub control: ::core::option::Option<
        unsafe extern "C" fn(
            dev: rt_device_t,
            cmd: core::ffi::c_int,
            args: *mut core::ffi::c_void,
        ) -> rt_err_t,
    >,
    #[doc = "< device private data"]
    pub user_data: *mut core::ffi::c_void,
}
